--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "socialdev-back",
   "version": "1.0.0",
   "description": "backend for socialDev note taking app",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jest": "^27.5.1",
     "mongoose": "^6.2.6",
     "nodemon": "^2.0.15"
   }
