--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jest": "^27.5.1",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.6",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "uuid": "^8.3.2"
   }
 }
