--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "backend for socialDev note taking app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose --coverage",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
