--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.6",
     "nodemon": "^2.0.15",
+    "supertest": "^6.2.2",
     "uuid": "^8.3.2"
   }
 }
